--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNfxUp0gfFEGM4Knz5uC1GS",
+      "authorship_tag": "ABX9TyPTdKJRxuqh9OARSbxUgzZ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "icDgPjf0g0WO"
+        "id": "icDgPjf0g0WO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1b543911-cbe9-46ec-a60e-c130075067f0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
-        ""
+        "import os\n",
+        "import glob\n",
+        "os.system(\"pip install wget\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "installing requirements Above"
+      ],
+      "metadata": {
+        "id": "Sme7nWqxja5b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, glob\n",
+        "\n",
+        "def get_files():\n",
+        "  files = glob.glob('/content/*')\n",
+        "  files.remove('/content/sample_data')\n",
+        "  return files\n",
+        "\n",
+        "def download_file(file_link):\n",
+        "  os.system(f\"wget {file_link}\")"
+      ],
+      "metadata": {
+        "id": "cziMiRvwjiwz"
+      },
+      "execution_count": 3,
+      "outputs": []
     }
   ]
 }
